修复其他文件转pdf功能